Scale continuous now also works for float values

--- a/examples/02_advanced/ode_serial_transfer.html
+++ b/examples/02_advanced/ode_serial_transfer.html
@@ -28,8 +28,8 @@
             // Note: fastmode is only useful/recommended if the sim can readily run 
             // at 60FPS without fast-mode, and may actually reduce the reported FPS
             // Nevertheless, the final state of the grid is reaches sooner in real time. 
-            ncol: 50,
-            nrow: 120,		            // dimensions of the grid to build
+            ncol: 100,
+            nrow: 60,		            // dimensions of the grid to build
             wrap: [true, true],       // Wrap boundary [COLS, ROWS]   
             scale: 3,				    // scale of the grid (nxn pixels per grid cell)
             statecolours: { 'alive': { 1: 'blue' } },   // The background state '0' is never drawn
@@ -49,10 +49,10 @@
         let refresh_medium_conc = 0.1   // Conc for refreshing the medium
 
         sim.makeGridmodel("batchculture");
-        sim.batchculture.colourViridis("external_resources", 100)
-        sim.batchculture.colourViridis("internal_resources", 100)
-        sim.createDisplay_continuous({model:"batchculture", property:"internal_resources", label:"Internal resources", minval:0, maxval:100}) 
-        sim.createDisplay_continuous({model:"batchculture", property:"external_resources", label:"External resources", minval:0, maxval:100}) 
+       // sim.batchculture.colourViridis("external_resources", 100)
+        //sim.batchculture.colourViridis("internal_resources", 100)
+        sim.createDisplay_continuous({model:"batchculture", property:"internal_resources", label:"Internal resources", minval:0, maxval:100, num_colours:40, fill: 'viridis'}) 
+        sim.createDisplay_continuous({model:"batchculture", property:"external_resources", label:"External resources", minval:0, maxval:100, num_colours:40, fill: 'viridis'}) 
 
         // sim.resource_e.colourRamp('resources_e',[0,0,0],[64, 224, 208],100)
 
