--- a/examples/04_even_more_examples/cooperation_evolving.html
+++ b/examples/04_even_more_examples/cooperation_evolving.html
@@ -20,7 +20,7 @@
 var sim;                            // This 'global' variable will hold the entire simulation
 var initial_helping_rate = 0.5    // Determines how much help a 'cooperative' individual gives to its neighbours
 var death = 0.05                    // Determines how often an individual spontaneously dies, making a new spot available
-var movement = 1                    // Determines how much individuals 'move around'
+var movement = 1                   // Determines how much individuals 'move around'
 var mutation_rate = 0.01
 
 /**
@@ -34,14 +34,14 @@ function cacatoo() {
         title: "Cooperating with your neighbours (evolving)",
         description: "",
         maxtime: 1000000,
-        ncol: 200,
-        nrow: 200,		                                            // dimensions of the grid to build
+        ncol: 150,
+        nrow: 150,		                                            // dimensions of the grid to build
         seed: 56,
         fps: 60,                                                   // Note: FPS can only be set in fastmode
         fastmode: true,
         throttlefps: false,                                        // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
         wrap: [false, false],                                        // Wrap boundary [COLS, ROWS]
-        scale: 2,				                                    // scale of the grid (nxn pixels per grid point)            
+        scale: 3,				                                    // scale of the grid (nxn pixels per grid point)            
         graph_interval: 5,
         graph_update: 20,
         statecolours: { 'alive': { 1: 'black' }}
@@ -62,7 +62,7 @@ function cacatoo() {
     }
 
     sim.createDisplay_continuous({model:"coop", property:"helping_rate", label:"Cooperation",
-                        multiplier:100, minval: 0, maxval:60, fill:"inferno"})
+                        minval: 0.0, maxval:1.0,num_colours:50, na_colour: 'black', fill:"inferno"})
     
     /**
     * Define your next-state function here: for each grid point, what determines what that grid point will be like next timestep?
@@ -81,6 +81,7 @@ function cacatoo() {
                 me.parent = winner      // Always know who your parent is.
                 me.time_birth = sim.time
                 me.helping_rate = winner.helping_rate
+               
                 if(this.rng.random() < mutation_rate){
                     let step = (2.0*this.rng.genrand_real1()-1.0)*0.3
                     me.helping_rate += step
@@ -92,7 +93,7 @@ function cacatoo() {
 
         if (this.rng.random() < death){                                    // Stochastic death (species become 0, which is an empty space for the next step to compete over)
             this.grid[i][j].alive = 0
-            this.grid[i][j].helping_rate = 0
+            this.grid[i][j].helping_rate = undefined
             this.grid[i][j].fitness = 0
         }
     }
@@ -124,7 +125,7 @@ function cacatoo() {
             {
                 if (this.grid[i][j].alive == 1) {
                     help = this.grid[i][j].helping_rate
-                    if(helping_rates.length < 10) helping_rates.push(help)
+                    if(helping_rates.length < 20) helping_rates.push(help)
                     sumhelping += help
                     sumalive ++
                 }
