Updated the docs

--- a/examples/04_even_more_examples/tutorial_colony.html
+++ b/examples/04_even_more_examples/tutorial_colony.html
@@ -38,9 +38,9 @@
             seed: 11,
             wrap: [false, false],                         // Wrapped boundary conditions? [COLS, ROWS]   
             scale: 2,				                      // Scale of the grid (nxn pixels per grid point)
-            statecolours: {'species': { 'low': "#FFFFFF",                      // Sets up colours of states (here 1,2,3 = A,B,C). Can be a colour name or a hexadecimal colour. 
-                                        'medium': "red",                          // If your state it not defined, it won't be drawn and you'll see the grid-background colour (default: black)
-                                        'high': "#3030ff"}}
+            statecolours: {'species': { 'low uptake': "#FFFFFF",                      // Sets up colours of states (here 1,2,3 = A,B,C). Can be a colour name or a hexadecimal colour. 
+                                        'medium uptake': "red",                          // If your state it not defined, it won't be drawn and you'll see the grid-background colour (default: black)
+                                        'high uptake': "#3030ff"}}
         }
 
         /*
@@ -54,9 +54,9 @@
         sim.makeGridmodel("growth")                              // Build a new Gridmodel within the simulation called "model"
 
         sim.initialGrid(sim.growth,'external_resources',1000.0,1.0) // Give 100% of grid points external resources (set to 1)
-        let species = [{species:'low',uptake_rate:0.5,internal_resources:1},
-                                {species:'medium',uptake_rate:5.0,internal_resources:1},
-                                {species:'high',uptake_rate:50.0,internal_resources:1}]
+        let species = [{species:'low uptake',uptake_rate:0.5,internal_resources:1},
+                                {species:'medium uptake',uptake_rate:5.0,internal_resources:1},
+                                {species:'high uptake',uptake_rate:50.0,internal_resources:1}]
         
         sim.populateSpot(sim.growth, species, [0.33,0.33,0.33], 150, config.ncol/2, config.nrow/2)         // Place the three 'species' in a small spot in the middle of the grid
         //sim.populateGrid(sim.growth, species, [0.001,0.001,0.001])         // Alternatively, innoculate the entire grid with species
@@ -108,7 +108,7 @@
         sim.growth.update = function () {
             this.asynchronous()         // Applied as many times as it can in 1/60th of a second
             this.diffuseStates('external_resources',0.1)
-            this.plotPopsizes('species', ['low', 'medium','high'])
+            this.plotPopsizes('species', ['low uptake', 'medium uptake','high uptake'])
         }
 
         /*
