Added mouse event examples. Reverted all.js for better workflow.

--- a/examples/01_beginner/gol.html
+++ b/examples/01_beginner/gol.html
@@ -13,7 +13,8 @@
 <!--  ---------------Do not change the part below ------------------  -->
 
 <html>
-<script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
+<script src="../../dist/cacatoo.js"></script>   <!-- Include cacatoo library (compiled with rollup) -->
+<script src="../../lib/all.js"></script>        <!-- Load other packages -->
 <link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 <script>
 
