--- a/examples/04_even_more_examples/five_x_plus_one.html
+++ b/examples/04_even_more_examples/five_x_plus_one.html
@@ -14,6 +14,8 @@
 
 <html>
 <script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
+<script src="../../lib/all.js"></script>        <!-- Load other packages -->
+
 <link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 <script>
 
