--- a/examples/01_beginner/gol.html
+++ b/examples/01_beginner/gol.html
@@ -15,6 +15,8 @@
 <html>
 <script src="../../dist/cacatoo.js"></script>   <!-- Include cacatoo library (compiled with rollup) -->
 <script src="../../lib/all.js"></script>        <!-- Load other packages -->
+<link rel="shortcut icon" type="image/jpg" href="../../patterns/cacatoo.png"/>
+
 <link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 <script>
 
