--- a/examples/01_beginner/prime.html
+++ b/examples/01_beginner/prime.html
@@ -42,7 +42,7 @@
         sim.makeGridmodel("prime");
         sim.createDisplay("prime", "alive", "Modulo prime")
 
-        // Note to user: initialPattern is disabled, as it requirs a webserver for security reasons. Use the pattern button instead. 
+        // Note to user: initialPattern is disabled, as it requirs a webserver for security reasons. You can also use the pattern button instead, or take a look at the draw_gol.html example where you can draw your own starting pattern.
         // sim.initialPattern(sim.prime, 'alive', '../patterns/elephant_cacatoo.png', 115, 115)
         sim.prime.grid[150][150].alive=1
 
