--- a/examples/03_expert/classes_PoS_TEs.html
+++ b/examples/03_expert/classes_PoS_TEs.html
@@ -1,3 +1,13 @@
+
+<!-- 
+
+    EXPERT EXAMPLE FILE
+    This file shows the advanced useage of the Cacatoo library, using custom classes and methods. It is 
+    similar to classes_PoS.html, but with much more dynamics for the "genomes". The genomes contain self-
+    replicating DNA elements (TEs), which cause fitness penalties for their host. 
+    
+-->
+
 <html>
 <script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
 <script src="../../lib/all.js"></script> <!-- Include other libraries (concattenated in 1 file) -->
