--- a/examples/04_even_more_examples/draw_gol.html
+++ b/examples/04_even_more_examples/draw_gol.html
@@ -1,12 +1,6 @@
 <!-- 
 
-    EXAMPLE FILE 01: Game of Life
-    This file shows the most easy use-case for the Cacatoo library, and 
-    illustrates it's core functionality with Conways Game of Life. 
-
-    It simply load the library and other dependencies using <script>
-    tags, load some CSS-stylesheets for the GUI, and than starts 
-    with defining the model. 
+    Extention on EXAMPLE FILE 01: Game of Life: draw your own initial state!
     
 -->
 
