--- a/examples/01_beginner/spirals.html
+++ b/examples/01_beginner/spirals.html
@@ -61,7 +61,9 @@
 
         sim.spirals.update = function () {
             this.synchronous()                              // Applied as many times as it can in 1/60th of a second        
-            this.plotPopsizes('colour', [1, 2, 3, 4, 5, 6, 7, 8])            
+            this.plotPopsizes('colour', [1, 2, 3, 4, 5, 6, 7, 8])                           
+            // change stuff below to sim.spirals.drawslide("name")
+            
         }
         
         sim.addButton("pause", function () { sim.toggle_play() })
