--- a/examples/04_even_more_examples/tutorial_predator_prey.html
+++ b/examples/04_even_more_examples/tutorial_predator_prey.html
@@ -1,8 +1,3 @@
-<!-- 
-  ###########################################################################################
-    Example (empty) project
-  ###########################################################################################
--->
 
 <html>
 <script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
@@ -36,7 +31,7 @@
             nrow: 60,		                              // Number of rows (height of your grid)
             wrap: [true, true],                         // Wrapped boundary conditions? [COLS, ROWS]   
             scale: 3,				                      // Scale of the grid (nxn pixels per grid point)
-            statecolours: { 'species': { 'prey': [245, 245, 50], 'predator': [255, 0, 96] } },          // Colours for each state. Background (0) defaults to black. 
+            statecolours: { 'species': { 'prey': [245, 245, 50], 'predator': [255, 0, 96] } },          // Colours for each state. Defaults to black. 
         }
 
         /*
