Updating the docs

--- a/unittests/bundle_test.html
+++ b/unittests/bundle_test.html
@@ -1,14 +1,6 @@
 <!-- 
     
-    EXAMPLE FILE Cheater (HTML)
-
-    This HTML file is different from other examples like GoL and prime, because
-    instead of defining the model within the HTML itself, it merely includes the javascript
-    code called cheater.js. The benefit of this is that you can easily
-    swap between running your code interactively (in the browser), or just running
-    the raw code on the commandline via 'nodejs cheater.js'. 
-
-    Apart from this difference, the HTML file is identical. 
+    // In this "unit test", most of the functionalities in Cacatoo are called, and it is checked whether any unexpected behaviour occurs. 
 
 -->
 
