One more example

--- a/unit_test/bundle_test/bundle_test.html
+++ b/unit_test/bundle_test/bundle_test.html
@@ -6,10 +6,10 @@
 
 
 <html>
-<script src="../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
-<script src="../lib/all.js"></script>        <!-- Load other packages -->
+<script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
+<script src="../../lib/all.js"></script>        <!-- Load other packages -->
 
-<link rel="stylesheet" href="../style/cacatoo.css"> <!-- Set style sheet -->
+<link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 
 <!-- Include your model code here -->
 <script src="bundle_test.js"> </script>
