Added config-object based display creation to be more consistent with continuous displays

--- a/examples/04_even_more_examples/cooperation_evolving.html
+++ b/examples/04_even_more_examples/cooperation_evolving.html
@@ -43,7 +43,8 @@ function cacatoo() {
         throttlefps: false,                                        // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
         wrap: [false, false],                                        // Wrap boundary [COLS, ROWS]
         scale: 2,				                                    // scale of the grid (nxn pixels per grid point)            
-        graph_interval: 10,       
+        graph_interval: 10,
+        show_gridname: false,       
         graph_update: 50,
         statecolours: { 'alive': { 1: 'black' }}
     }
