--- a/examples/01_beginner/gol_dots.html
+++ b/examples/01_beginner/gol_dots.html
@@ -96,7 +96,7 @@ function cacatoo(){
     sim.addButton("pause/continue", function () { sim.toggle_play() })
     sim.addButton("step", function () { sim.step(); sim.display() })
     sim.modifysleep = function(newvalue) { this.sleep = newvalue}
-    sim.addCustomSlider("Sleeping time (ms)",function (new_value) { sim.sleep = new_value },0,1000,1,0) // addCustomSlider(function, minimal, maximal, step-size, default, label)
+    // sim.addCustomSlider("Sleeping time (ms)",function (new_value) { sim.sleep = new_value },0,1000,1,0) // addCustomSlider(function, minimal, maximal, step-size, default, label)
     sim.start()
 
 }
